Add JWT token header to request and update global CORS configuration
This commit adds two lines of code to the `apply()` method of the gateway filter, which mutate the `ServerHttpRequest` to include the JWT token header when present. It also updates the properties file to configure global CORS for allowed origins, methods, and headers. This allows clients to make authorized requests to the API gateway with CORS enabled.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,10 @@ spring:
 
   application:
     name: api-gateway
+
   cloud:
     gateway:
       routes:
-
         - id: user-service
           uri: lb://USER-SERVICE
           predicates:
@@ -36,4 +36,17 @@ spring:
             - Path=/transaction/**
           filters:
             - AuthenticationFilter
-
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: http://localhost:8085
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
+            allowedHeaders:
+              - Authorization
+              - Content-Type
+            allowCredentials: true
